--- a/iTrainee.MVC/Views/Home/Login.cshtml
+++ b/iTrainee.MVC/Views/Home/Login.cshtml
@@ -7,7 +7,7 @@
         <div class="col-xl-7">
             <div class="card rounded-3 text-black">
                 <div class="row g-0">
-                    <div class="col-md-5 col-md-5 d-flex align-items-center login-gradient">
+                    <div class="rounded-left col-md-5 col-md-5 d-flex align-items-center login-gradient">
                         <div class="text-white p-md-3 mx-md-3">
                             <h4 class="font-weight-bold mb-4">About Ideas2IT</h4>
                             <p class="big mb-0">
@@ -26,12 +26,12 @@
                                 <h6 class="text-muted mb-3 pt-4" style="letter-spacing: 1px;">Sign-in to your account</h6>
 
                                 <div class="form-outline mb-3">
-                                    <label class="form-label" for="form2Example17">Email address</label>
+                                    <label class="form-label text-muted" for="form2Example17">Email</label>
                                     <input type="email" id="form2Example17" class="form-control form-control-sm" />
                                 </div>
 
                                 <div class="form-outline mb-3">
-                                    <label class="form-label" for="form2Example27">Password</label>
+                                    <label class="form-label text-muted" for="form2Example27">Password</label>
                                     <input type="password" id="form2Example27" class="form-control form-control-sm" />
                                 </div>
 
@@ -39,7 +39,7 @@
                                     <button class="btn text-white login-gradient btn-md btn-block" type="button">Login</button>
                                 </div>
 
-                                <a class="big text-muted text-decoration-none" href="#!">Forgot password?</a>
+                                <a class="text-muted text-decoration-none" href="#!">Forgot password?</a>
 
                             </form>
                         </div>
