--- a/iTrainee.MVC/Views/Shared/_Layout.cshtml
+++ b/iTrainee.MVC/Views/Shared/_Layout.cshtml
@@ -12,73 +12,7 @@
 
     @if (!ViewData["Title"].Equals("Login Page"))
     {
-        <header>
-            <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light bg-custom-light">
-                <div>
-                    <img src="\css\logo.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
-                    <span class="font-weight-bolder fs-6 header-app-name px-3">iTrainee</span>
-                </div>
-
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div id="navbarCollapse" class="collapse navbar-collapse">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item  px-2">
-                            <i class="header-notification fa-lg fa fa-bell-o"></i>
-                        </li>
-                        <li class="nav-item dropdown px-2">
-                            <a class="text-dark nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <img src="\css\logo.jpg" width="40" height="40" class="rounded-circle"> <span class="px-2">User_Name</span>
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="#">Profile</a>
-                                <a class="dropdown-item" href="#">Change Password</a>
-                                <a class="dropdown-item" href="#">Sign Out</a>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-
-            <nav class="navbar navbar-expand-md actions-nav">
-                <div class="container-fluid">
-
-                    <!-- Toggler/collapsibe Button -->
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-
-                    <!-- Navbar links -->
-                <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                        <ul class="navbar-nav">
-                            <li class="nav-item px-3">
-                                <a class="nav-link text-white" href="#">Mentor</a>
-                            </li>
-                            <li class="nav-item px-3">
-                                <a class="nav-link text-white" href="#">Trainee</a>
-                            </li>
-                            <li class="nav-item px-3">
-                                <a class="nav-link text-white" href="#">Batch</a>
-                            </li>
-                            <li class="nav-item px-3">
-                                <a class="nav-link text-white" href="#">Stream</a>
-                            </li>
-                            <li class="nav-item px-3">
-                                <a class="nav-link text-white" href="#">Topics</a>
-                            </li>
-                            <li class="nav-item px-3">
-                                <a class="nav-link text-white" href="#">Sub Topics</a>
-                            </li>
-                            <li class="nav-item px-3">
-                                <a class="nav-link text-white" href="#">Alert Trainee</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </header>
+        @await Html.PartialAsync("Header")
     }
 
     <div class="container">
