--- a/iTrainee.MVC/Areas/Mentor/Views/Home/Index.cshtml
+++ b/iTrainee.MVC/Areas/Mentor/Views/Home/Index.cshtml
@@ -27,18 +27,13 @@
 			transform: translateY(-6px);
 			transition: transform 700ms cubic-bezier(.3, .7, .4, 1.5);
 		}
-
-		.card-hover-effect:hover {
-			cursor: pointer;
-			transition-duration: 0.5s;
-			transition-delay: 0.1s;
-		}
 	</style>
 </head>
 
     <div class="mb-lg-5 d-flex">
         <h1>Hello Mentor</h1>
         <div class="ml-auto mt-2">
+			<a class="btn btn-outline-primary" href="../Home/ManageStreams" >Manage Streams</a>
              <a class="btn btn-outline-primary" href="../Topics/ManageTopics" >Manage Topics</a>
 			@* @Html.ActionLink("Manage Topics", "ManageTopics", "Home", new {Area="Mentor"}, new {})*@
 			@* @Html.ActionLink("home", "Index", new { area = "Mentor", controller = "Home" })*@
@@ -52,7 +47,7 @@
 
 		<div class="col">
 			<div class="card mt-5">
-				<div class="card-body card-hover-effect">
+				<div class="card-body">
 					<h3 class="card-title mb-5">BATCH 1</h3>
 					<div class="d-flex mt-1 mb-1">
 						<h5>Stream:</h5>
