--- a/iTrainee.MVC/Areas/Mentor/Views/Home/index.cshtml
+++ b/iTrainee.MVC/Areas/Mentor/Views/Home/index.cshtml
@@ -19,7 +19,16 @@
 		}*/
 
 		.card:hover {
-			background-image: linear-gradient(144deg,#009ffd, rgb(0,35,155) 50%);
+			background-color:#F1F3F4;
+			border-radius: 8px;
+			box-shadow: rgba(0, 79, 255, 0.3) 0 15px 30px -5px;
+			
+			cursor: pointer;
+			transform: translateY(-6px);
+			transition: transform 700ms cubic-bezier(.3, .7, .4, 1.5);
+		}
+				.btn:hover{
+						background-image: linear-gradient(144deg,#009ffd, rgb(0,35,155) 50%);
 			border-radius: 8px;
 			box-shadow: rgba(0, 79, 255, 0.3) 0 15px 30px -5px;
 			color: #FFFFFF;
@@ -33,10 +42,12 @@
     <div class="mb-lg-5 d-flex">
         <h1>Hello Mentor</h1>
         <div class="ml-auto mt-2">
-			<a class="btn btn-outline-primary" href="../Home/ManageStreams" >Manage Streams</a>
-             <a class="btn btn-outline-primary" href="../Topics/ManageTopics" >Manage Topics</a>
-			@* @Html.ActionLink("Manage Topics", "ManageTopics", "Home", new {Area="Mentor"}, new {})*@
-			@* @Html.ActionLink("home", "Index", new { area = "Mentor", controller = "Home" })*@
+			<a class="btn btn-outline-primary" href="/Mentor/Home/ManageStreams" >Manage Streams</a>
+			@*<a href="@Url.Action("ManageStreams","Home",new {Area="Mentor"})">Manage Streams</a>*@ 
+			@*<a asp-area="Mentor" asp-controller="Home" asp-action="ManageStreams">Manage Streams</a>*@
+             @*<a class="btn btn-outline-primary" href="../Home/ManageTopics" >Manage Topics</a>*@
+			 @Html.ActionLink("Manage Topics", "ManageTopics", "Home", new {Area="Mentor"})
+			@* @Html.ActionLink("home", "ManageTopics", new { area = "Mentor", controller = "Home" })*@
         </div>
     </div>
 
