--- a/iTrainee.MVC/Areas/Mentor/Views/Home/Index.cshtml
+++ b/iTrainee.MVC/Areas/Mentor/Views/Home/Index.cshtml
@@ -39,14 +39,8 @@
 	</style>
 </head>
 
-    <div class="mb-lg-5 d-flex">
-        <h1>Hello Mentor</h1>
-        <div class="ml-auto mt-2">
-			<a class="btn btn-outline-primary" href="../Home/ManageStreams" >Manage Streams</a>
-             <a class="btn btn-outline-primary" href="../Topics/ManageTopics" >Manage Topics</a>
-			@* @Html.ActionLink("Manage Topics", "ManageTopics", "Home", new {Area="Mentor"}, new {})*@
-			@* @Html.ActionLink("home", "Index", new { area = "Mentor", controller = "Home" })*@
-        </div>
+    <div class=" mt-5">
+        <h1>Hello Mentor,</h1>
     </div>
 
 
