--- a/iTrainee.MVC/Areas/Admin/Views/Home/ManageUser.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/ManageUser.cshtml
@@ -25,7 +25,7 @@
 </style>
 
 <div class="d-flex justify-content-between mt-4">
-    <h3>Manage User</h3>
+    <h3>Manage @ViewBag.Role</h3>
     <button data-toggle="modal" class="btn btn-add-gradient btn-primary mb-3" onclick="GetUser(0)" data-target="#myModal1">Add New</button>
 </div>
 <table class="table table-hover table-bordered">
