--- a/iTrainee.MVC/Areas/Admin/Views/Home/SaveUser.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/SaveUser.cshtml
@@ -32,15 +32,15 @@
 
             <label class="col-form-lab el d-block form-group">Choose Role</label>
             <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="Admin" name="IsAdmin">
+                <input class="form-check-input" type="checkbox" id="Admin" name="IsAdmin" checked="@Model.IsAdmin">
                 <label class="form-check-label" for="inlineCheckbox1">Admin</label>
             </div>
             <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="Mentor" name="IsMentor">
+                <input class="form-check-input" type="checkbox" id="Mentor" name="IsMentor" checked="@Model.IsMentor">
                 <label class="form-check-label" for="inlineCheckbox1">Mentor</label>
             </div>
             <div class="form-check form-check-inline form-group">
-                <input class="form-check-input" type="checkbox" id="Trainee" name="IsTrainee">
+                <input class="form-check-input" type="checkbox" id="Trainee" name="IsTrainee" checked="@Model.IsTrainee">
                 <label class="form-check-label" for="inlineCheckbox2">Trainee</label>
             </div>
 
