--- a/iTrainee.MVC/Views/Home/Login.cshtml
+++ b/iTrainee.MVC/Views/Home/Login.cshtml
@@ -17,7 +17,7 @@
                     </div>
                     <div class="col-md-6 col-md-7 d-flex align-items-center">
                         <div class="card-body px-4 py-5 text-black">
-                            <form>
+                            <form id="LoginForm" method="post" asp-controller="Home" asp-action="Login">
                                 <div class="d-flex mb-3">
                                     <img src="\css\logo.jpg" width="90" height="90" class="d-inline-block align-top" alt="">
                                     <span class="text-center font-weight-bolder fs-5 login-app-name">iTrainee</span>
@@ -27,16 +27,16 @@
 
                                 <div class="form-outline mb-3">
                                     <label class="form-label text-muted" for="form2Example17">Email</label>
-                                    <input type="email" id="form2Example17" class="form-control form-control-sm" />
+                                    <input type="email" name="UserName" class="form-control form-control-sm" />
                                 </div>
 
                                 <div class="form-outline mb-3">
                                     <label class="form-label text-muted" for="form2Example27">Password</label>
-                                    <input type="password" id="form2Example27" class="form-control form-control-sm" />
+                                    <input type="password" name="Password" class="form-control form-control-sm" />
                                 </div>
 
                                 <div class="pt-2 mb-2">
-                                    <button class="btn text-white login-gradient btn-md btn-block" type="button">Login</button>
+                                    <button id="LoginBtnSave" class="btn text-white login-gradient btn-md btn-block" type="submit">Login</button>
                                 </div>
 
                                 <a class="text-muted text-decoration-none" href="#!">Forgot password?</a>
@@ -49,3 +49,23 @@
         </div>
     </div>
 </div>
+
+@*<script type="text/javascript">
+		$(document).ready(function () {
+
+		$("#LoginBtnSave").click(function () {
+			var loginDetails = $("#LoginForm").serialize();
+			$.ajax({
+				type: "POST",
+				url: "/Home/Login",
+				data: loginDetails,
+				success: function () {
+					window.location.replace("/Mentor/Home/ManageStreams")
+				},
+				error: function () {
+					alert("Unable to save data");
+				},
+			});
+		});
+	});
+</script>*@
