--- a/iTrainee.MVC/Areas/Admin/Views/Home/ManageUser.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/ManageUser.cshtml
@@ -25,7 +25,7 @@
 </style>
 
 <div class="d-flex justify-content-between mt-4">
-    <h3>Manage User</h3>
+    <h3>Manage @ViewBag.Role</h3>
     <button data-toggle="modal" class="btn btn-add-gradient btn-primary mb-3" onclick="GetUser(0)" data-target="#myModal1">Add New</button>
 </div>
 <table class="table table-hover table-bordered">
@@ -98,7 +98,7 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h3 class="modal-title">Save User</h3>
+                <h3 class="modal-title">@ViewBag.Role Details</h3>
             </div>
             <div class="modal-body" id="myModalBodyDiv1">
             </div>
