--- a/iTrainee.MVC/Areas/Admin/Views/Home/SaveUser.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/SaveUser.cshtml
@@ -3,6 +3,7 @@
 <form id="myForm" method="Post">
     <div class="row">
         <div class="col-md-6">
+       
             <div class="form-group">
                 <input type="hidden" class="form-control" name="Id" value="@Model.Id" required />
                 <label class="col-form-label">First Name</label>
@@ -32,15 +33,15 @@
 
             <label class="col-form-lab el d-block form-group">Choose Role</label>
             <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="Admin" name="IsAdmin">
+                <input class="form-check-input" type="checkbox" id="Admin" name="IsAdmin" checked="@Model.IsAdmin">
                 <label class="form-check-label" for="inlineCheckbox1">Admin</label>
             </div>
             <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="Mentor" name="IsMentor">
+                <input class="form-check-input" type="checkbox" id="Mentor" name="IsMentor" checked="@Model.IsMentor" >
                 <label class="form-check-label" for="inlineCheckbox1">Mentor</label>
             </div>
             <div class="form-check form-check-inline form-group">
-                <input class="form-check-input" type="checkbox" id="Trainee" name="IsTrainee">
+                <input class="form-check-input" type="checkbox" id="Trainee" @(Model.IsTrainee?"checked='checked'":"") >
                 <label class="form-check-label" for="inlineCheckbox2">Trainee</label>
             </div>
 
