--- a/iTrainee.MVC/Areas/Admin/Views/Home/ManageUser.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/ManageUser.cshtml
@@ -115,7 +115,20 @@
         $("#myModalBodyDiv1").load(UserPath, function () {
             $("#myModal1").modal("show");
         });
+      
     };
+
+    $('#myModal1').on('show.bs.modal', function() {
+        debugger
+        if (window.location.search == "?role=Trainee") {
+             $('#Trainee').prop('checked','checked');
+        } else if  (window.location.search == "?role=Mentor") {
+             $('#Mentor').prop('checked','true');
+        }
+    //    } else {
+    //     $('#Trainee').prop('checked','false');
+    //}
+    });
 
     $('#delete').on('show.bs.modal', function (event) {
             var button = $(event.relatedTarget)
