--- a/iTrainee.MVC/Areas/Shared/Views/Batch/AddEditBatch.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Batch/AddEditBatch.cshtml
@@ -27,7 +27,7 @@
 		<label class="col-form-label">Streams</label><br />
 		@Html.ListBoxFor(model=>model.SelectedStreamIds ,new SelectList(Model.StreamList, "Id", "Name"),  htmlAttributes: new { id="multiSelectStream", @class = "form-control", multiple="multiple" })
 	</div>
-	<input type="submit" class="mt-3 float-right btn btn-primary" value="Save" />
+	<input type="submit" class="mt-3 btn btn-primary" value="Save" />
 }
 
 @section scripts{
