--- a/iTrainee.MVC/Areas/Shared/Views/Messages/ManageMessages.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Messages/ManageMessages.cshtml
@@ -1,1 +1,115 @@
-﻿
+﻿@model IEnumerable<iTrainee.Models.Messages>
+
+@{
+    ViewData["Title"] = "ManageMessages";
+}
+
+<style>
+    .delete-icon {
+        color: red;
+        font-size: x-large;
+    }
+
+    .edit-icon {
+        color: #00239B;
+        font-size: x-large;
+    }
+
+    .view-icon {
+        font-size: x-large;
+    }
+
+    .actions-column {
+        width: 100px;
+    }
+
+    /*    #chat2 .form-control {
+                                        border-color: transparent;
+                                    }
+
+                                        #chat2 .form-control:focus {
+                                            border-color: transparent;
+                                            box-shadow: inset 0px 0px 0px 1px transparent;
+                                        }
+
+                                    .divider:after,
+                                    .divider:before {
+                                        content: "";
+                                        flex: 1;
+                                        height: 1px;
+                                        background: #eee;
+                                    }*/
+</style>
+
+<div class="d-flex justify-content-between mt-4">
+    <h3>Messages</h3>
+    <a href="/Shared/Batch/AddEditBatch?Id=0" class="btn btn-primary btn-add-gradient float-right mb-3"> Add New Alert</a>
+</div>
+
+<table class="table table-hover table-bordered">
+    <thead>
+        <tr class="text-center">
+            <th>
+                @Html.DisplayNameFor(model => model.Message)
+            </th>
+            <th colspan="3">
+                Actions
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Message)
+                </td>
+                <td class="text-center actions-column">
+                    <a href="/Shared/Messages/AddEditMessages?Id=@item.Id"><i class="fa fa-pencil edit-icon"></i></a>
+                </td>
+                <td class="text-center actions-column">
+                    @using (Html.BeginRouteForm(routeName: "Shared",
+                   routeValues: new
+                   {
+                       action = "DeleteMessage",
+                       controller = "Messages",
+                       area = "Shared",
+                       id = item.Id
+                   }, FormMethod.Post))
+                    {
+                        <button class="btn shadow-none" type="submit" onclick="return confirm('Are you sure want to delete this message @item.Message?')">
+                            <i class="fa fa-trash delete-icon"></i>
+                        </button>
+                    }
+                    @*<a href="/Shared/Messages/DeleteMessage?Id=@item.Id"><i class="fa fa-trash delete-icon"></i></a>*@
+                </td>
+                <td class="text-center actions-column">
+                    <a href="#" onclick="ViewAlertDetails(@item.Id)"><i class="fa fa-eye view-icon"></i></a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
+
+
+<div class="modal fade" id="alertModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <a href="#" class="close" data-dismiss="modal">&times;</a>
+            </div>
+            <div class="modal-body" id="alertModalBodyDiv">
+            </div>
+        </div>
+    </div>
+</div>
+
+<script type="text/javascript">
+        var ViewAlertDetails = function (id) {
+        var url = "/Shared/Messages/ViewAlertDetails?Id=" + id;
+        $("#alertModalBodyDiv").load(url, function () {
+            $("#alertModal").modal("show");
+        });
+    };
+</script>
